# tas_agent

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
.cargo/: config.toml
.github/workflows/: pre-commit.yml  tests.yml
config/: .gitignore  api-key.sample  config.toml.sample
docs/: LUKS.md
docs/experimental/: certify.md
packaging/debian/: changelog  control  copyright  rules  tas-agent-dracut.prerm  tas-agent-initramfs.prerm  tas-agent.postinst  tas-agent.prerm
packaging/rpm/: tas-agent.spec
scripts/: install.sh  tas-luks-bind
scripts/dracut/: module-setup.sh  tas-net-setup.sh
scripts/initramfs/ubuntu/: modules
scripts/initramfs/ubuntu/hooks/: tas_agent
scripts/initramfs/ubuntu/init-premount/: tas_agent
scripts/initramfs/ubuntu/local-bottom/: tas_agent
scripts/initramfs/ubuntu/local-top/: tas_agent
scripts/systemd/: tas-agent-askpass.path  tas-agent-askpass.service  tas-agent-network.service
scripts/systemd/modules-load.d/: tas-agent.conf
src/: askpass.rs  crypto.rs  gpu_evidence.rs  main.rs  passfifo.rs  tas_api.rs  tee_evidence.rs  utils.rs
src/certify/: api.rs  csr.rs  keygen.rs  material_writer.rs  mod.rs  renewal_input.rs
src/components/: gpu_nvidia.rs  mod.rs
