[package]
name = "tas_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
tempfile = "3.6"
base64 = "0.21"
hex = "0.4"
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10"
# Only needed for askpass, which must read CLOCK_MONOTONIC directly.
rustix = { version = "1.0.7", features = ["time"], optional = true }
# 0.8 required by rsa
rand = "~0.8"
aes = "0.8.4"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
pretty-hex = "0.4.1"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
aes-gcm = "0.10.3"
aes-kw = "0.2"

zeroize = "1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.100"
toml = "0.9.11"
log = "0.4.29"
chrono = "0.4.43"
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
retry-policies = "0.2"
nv-attestation-sdk = { git = "https://github.com/NVIDIA/attestation-sdk", tag = "2026.04.29", optional = true }

[features]
gpu-nvidia = ["dep:nv-attestation-sdk"]
askpass = ["dep:rustix"]
passfifo = []

[dev-dependencies]
mockito = "1.7"
tempfile = "3.6"
